# PoPManager

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ADD_NEW_COIN.md  CLOUD_ARCHITECTURE.md  CLOUD_SYNC.md  CLOUD_TROUBLESHOOTING.md  RELEASE_SETUP.md  SUPPORTED_MINERS.md  windows-code-signing.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  LICENSE.rtf  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cached_state.rs  http_server.rs  lib.rs  main.rs  mdns.rs  migrate.rs  paths.rs  poller.rs  popminer_device.rs
src-tauri/src/cloud/: client.rs  command_exec.rs  mod.rs  queue.rs  sync.rs  ws.rs
src-tauri/src/commands/: alerts.rs  antminer.rs  coins.rs  email.rs  export.rs  history.rs  miner.rs  mobile_miner.rs  mod.rs  notifications.rs  pool.rs  pool_profiles.rs  preferences.rs  profitability.rs  scan.rs  storage.rs  tray.rs  uptime.rs  whatsminer.rs
src/components/: AsicAddDevicePanel.tsx  CloudSyncPanel.tsx  NotificationBanner.tsx  PairingCodePanel.tsx  Sidebar.tsx
src/context/: AlertContext.tsx  ProfitabilityContext.tsx
src/pages/: Alerts.tsx  Dashboard.tsx  MinerDetail.tsx  MinerList.tsx  Miners.tsx  MobileMinerDetail.tsx  MobileMinerList.tsx  Monitoring.tsx  Pools.tsx  PopMinerList.tsx  Settings.tsx
src/types/: alerts.ts  miner.ts
src/utils/: coinIcon.ts  coinLookup.ts  logger.ts
thoughts/: HANDOFF_OBMANAGER_DATADIR_MIGRATION.md  HANDOFF_OVERMANAGER_DATADIR_MIGRATION.md
