[package]
name = "pop-manager"
version = "0.1.0"
description = "PoPManager - Open-source ASIC miner management by Proof of Prints"
authors = ["Proof of Prints"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "pop_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pop-manager"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
local-ip-address = "0.6"
ipnetwork = "0.20"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
