[package]
name = "pop-manager"
version = "1.0.1"
description = "PoPManager - Open-source ASIC miner management by Proof of Prints"
authors = ["Proof of Prints"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "pop_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pop-manager"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
local-ip-address = "0.6"
ipnetwork = "0.20"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Registry", "Win32_Security"] }
tauri-winrt-notification = "0.7"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
